hard-gists/1402892/run.log
=== Docker Run Log for 1402892 ===
Started at: Mi 29. Okt 12:13:03 CET 2025

[2025-10-29 12:13:03] START: Running container for 1402892
[2025-10-29 12:13:03] SUCCESS: Container 61fe19b9548fd80f95c6be24cebfd6d8fccf0b53ad91b0105f7321c4d53b19bb started for 1402892
=== Container logs for 1402892 ===
  File "/snippet.py", line 52
    print y
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1402892 ===
[2025-10-29 12:13:06] INFO: Container 61fe19b9548fd80f95c6be24cebfd6d8fccf0b53ad91b0105f7321c4d53b19bb has stopped
